# rdc

./: LICENSE  README.md  pyproject.toml
docs/: index.md  modules.md
rdc/: run_single_subj.py  test.slurm
